fix 'unsubscribe' page spacing

--- a/static/css/calendar.css
+++ b/static/css/calendar.css
@@ -54,6 +54,11 @@
     font-size: 30px;
 }
 
+/* .unsubscribe-page {
+    display: grid;
+    place-items: center;
+} */
+
 .explore-more {
     font-family: 'Righteous';
     font-size: 47px;
